fix not centering when one book at moving isComplete and search, also change className to be readable

--- a/styles.css
+++ b/styles.css
@@ -242,7 +242,7 @@ form button {
   margin: auto;
 }
 
-.not-empty {
+.more-than-one-book {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
